Fix spacing and background color on bouncy scroll

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	background-color: white;
+	background-color: black;
 	max-width: 100%;
 	overflow-x: hidden;
 }
